# datafusion-rdbms-ext

./: .gitignore  Cargo.toml  README.md
src/: catalog.rs  error.rs  lib.rs  node.rs  optimizer.rs  parser.rs  physical_plan.rs  planner.rs  reader.rs
src/parser/: aggregates.rs  mod.rs
src/sqldb/: mod.rs  postgres.rs
src/sqldb/postgres/: binary_reader.rs  datatypes.rs  mod.rs  table_provider.rs
testdata/: docker-compose.yml  postgres.Dockerfile  tpch-postgres.sql
testdata/queries/: q1.sql  q10.sql  q11.sql  q12.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q6.sql  q7.sql  q8.sql  q9.sql
tests/: aggregate.rs  pushdown_join.rs  tpch.rs
