[package]
name = "datafusion-rdbms-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Currently depends on some minor changes to DataFusion (TableSource)
# datafusion = { path = "../arrow-datafusion/datafusion/core", features = ["jit"] }
datafusion = { git = "https://github.com/nevi-me/arrow-datafusion", branch = "dbms-changes-2022-06-18", features = ["jit"] }
sqlparser = "0.17.0"
async-trait = "0.1"
futures-util = "0.3"
# TODO: create separate features for sources, link them to DB dialects
tokio-postgres = "0.7"
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1"
bytes = "1"
log = "0.4"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
env_logger = "0.9"

[profile.dev]
# Run tests with some optimization to speed them up
opt-level = 1